--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+/* CSS reset */
+*, *:before, *:after { 
+  margin:0;
+  padding:0;
+  font-family: Arial,sans-serif;
+}
+
 .App {
   text-align: center;
 }
