--- a/src/Components/NavBar/Navbar.css
+++ b/src/Components/NavBar/Navbar.css
@@ -1,9 +1,21 @@
+.navbar h1 {
+  color: white;
+}
+
+.on {
+  background-color: green;
+  border-radius: 50%;
+  margin-right: 20px;
+  width: 40px;
+  height: 40px;
+}
+
 .navbar {
-  background-color: #060b26;
+  background-color: #000000;
   height: 80px;
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-content: center;
   width: 100vw;
 }
 
@@ -13,8 +25,18 @@
   background: none;
 }
 
+.header-text {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 25px;
+  align-items: center;
+  font-size: 2rem;
+  background: none;
+}
+
 .nav-menu {
-  background-color: #060b26;
+  background-color: #000000;
   width: 300px;
   height: 100vh;
   display: flex;
@@ -54,7 +76,7 @@
 }
 
 .nav-text a:hover {
-  background-color: #1a83ff;
+  background-color: #437eb4;
 }
 
 .nav-menu-items {
@@ -62,7 +84,7 @@
 }
 
 .navbar-toggle {
-  background-color: #060b26;
+  background-color: #000000;
   width: 100%;
   height: 80px;
   display: flex;
